# LeakFinder

./: .gitignore  LICENSE  README.md  TODO.md  meson.build
include/: default_regex.h  secrets.h  secrets.re
src/: main.c
tests/: leaker.toml  test_guide.md
